--- a/Index.html
+++ b/Index.html
@@ -1,13 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="th">
 <head>
-    <base target="_top">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>เว็บแอป</title>
+<meta charset="UTF-8"
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>ระบบยืนยันตัวตน</title>
 </head>
-<body>
-    <iframe style="width: 100%; height: 100vh;" scrolling="yes" src="https://script.google.com/macros/s/AKfycbzjQ-5JAA0vMEMk_M0fQvZwaXFApf4O4FRBiBWXYlCVEMIdYtzF1WshxdcddpktR6o/exec" frameborder="0"></iframe>
+<body style="padding:0px;margin:0px;width:100vw;height:100vw; background-color:#eee;">
+<iframe
+  id="app"
+src="https://script.google.com/macros/s/AKfycbxke6aV412qbPhU4cXjER52K5vOA9DOQs4lI3fHPLzWd8JwT6e-7wTAgl4owd6QZgbRCQ/exec"
+frameborder="0"
+scrolling="no"
+style="width: 100%; height: 100%">
+</iframe>
 </body>
 </html>
